[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/personagem_chrono_cookies.png" type="Texture" id=1]
[ext_resource path="res://sprites/espada_personagem.png" type="Texture" id=2]
[ext_resource path="res://scripts/armas/espada_01.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 24.0

[node name="arma" type="Node2D"]
position = Vector2( 0, -12 )
script = ExtResource( 3 )

[node name="postura" type="Node2D" parent="."]

[node name="espada" type="Sprite" parent="postura"]
rotation = -2.61799
scale = Vector2( 0.9, 0.8 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -8, -12 )

[node name="mao_direita" type="Sprite" parent="postura/espada"]
position = Vector2( 5.02691, -0.405025 )
rotation = -1.5708
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 2, 15, 6, 6 )

[node name="mao_esquerda" type="Sprite" parent="postura/espada"]
position = Vector2( -0.409309, 1.78145 )
rotation = -1.5708
texture = ExtResource( 1 )
flip_h = true
region_enabled = true
region_rect = Rect2( 2, 15, 6, 6 )

[node name="area_ataque" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 64

[node name="colisao_area" type="CollisionShape2D" parent="area_ataque"]
position = Vector2( 16, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="posicao_efeito" type="Position2D" parent="."]
position = Vector2( 24, 0 )

[node name="cadencia_ataque" type="Timer" parent="."]

[node name="tween_ataque" type="Tween" parent="."]
[connection signal="area_entered" from="area_ataque" to="." method="_on_area_ataque_area_entered"]
[connection signal="timeout" from="cadencia_ataque" to="." method="_on_cadencia_ataque_timeout"]
[connection signal="tween_completed" from="tween_ataque" to="." method="_on_tween_ataque_tween_completed"]
